Add oneshot for testing
